Added ability to disable tasks.
